--- a/CoLab/Stopword_TfIdf.ipynb
+++ b/CoLab/Stopword_TfIdf.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Appendix.ipynb",
+      "name": "Stopword-TfIdf.ipynb",
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": []
@@ -17,7 +17,7 @@
   "cells": [
     {
       "metadata": {
-        "id": "7YmYQo192iRS",
+        "id": "QYrPzfy_2rlN",
         "colab_type": "text"
       },
       "cell_type": "markdown",
@@ -29,41 +29,39 @@
     },
     {
       "metadata": {
-        "id": "yxedjPY22iRU",
+        "id": "jbYb-8vw2rlP",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 255
+          "height": 199
         },
-        "outputId": "c26044db-aef9-43d0-b654-2e3b0b607653"
+        "outputId": "a45c3b29-99a2-4981-9ebd-f58ab32c8e3e"
       },
       "cell_type": "code",
       "source": [
-        "# 분석에 필요한 모듈설치\n",
-        "! pip3 install sklearn\n",
+        "# # 분석에 필요한 모듈설치\n",
+        "! pip3 install sklearn nltk\n",
+        "\n",
         "import nltk\n",
         "nltk.download('punkt')\n",
         "nltk.download('stopwords')\n",
-        "news_texts = \"https://raw.githubusercontent.com/YongBeomKim/nltk_tutorial/master/data/News2017.txt\""
+        "news_texts = \"https://raw.githubusercontent.com/YongBeomKim/nltk_basic/master/data/News.txt\""
       ],
       "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Collecting sklearn\n",
-            "  Downloading https://files.pythonhosted.org/packages/1e/7a/dbb3be0ce9bd5c8b7e3d87328e79063f8b263b2b1bfa4774cb1147bfcd3f/sklearn-0.0.tar.gz\n",
-            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.6/dist-packages (from sklearn) (0.19.2)\n",
-            "Building wheels for collected packages: sklearn\n",
-            "  Running setup.py bdist_wheel for sklearn ... \u001b[?25l-\b \bdone\n",
-            "\u001b[?25h  Stored in directory: /root/.cache/pip/wheels/76/03/bb/589d421d27431bcd2c6da284d5f2286c8e3b2ea3cf1594c074\n",
-            "Successfully built sklearn\n",
-            "Installing collected packages: sklearn\n",
-            "Successfully installed sklearn-0.0\n",
+            "Requirement already satisfied: sklearn in /usr/local/lib/python3.6/dist-packages (0.0)\n",
+            "Requirement already satisfied: nltk in /usr/local/lib/python3.6/dist-packages (3.2.5)\n",
+            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.6/dist-packages (from sklearn) (0.20.3)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from nltk) (1.11.0)\n",
+            "Requirement already satisfied: scipy>=0.13.3 in /usr/local/lib/python3.6/dist-packages (from scikit-learn->sklearn) (1.1.0)\n",
+            "Requirement already satisfied: numpy>=1.8.2 in /usr/local/lib/python3.6/dist-packages (from scikit-learn->sklearn) (1.14.6)\n",
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
             "[nltk_data]   Package punkt is already up-to-date!\n",
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+            "[nltk_data]   Package stopwords is already up-to-date!\n"
           ],
           "name": "stdout"
         }
@@ -71,13 +69,13 @@
     },
     {
       "metadata": {
-        "id": "Bzp4pCvj2iRY",
+        "id": "xB3iast92rlW",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 370
+          "height": 399
         },
-        "outputId": "ac344b82-0704-4166-8144-43a3e7c713fe"
+        "outputId": "e2a1a897-04c1-4e8b-ae10-c7abcb8207f9"
       },
       "cell_type": "code",
       "source": [
@@ -124,19 +122,19 @@
     },
     {
       "metadata": {
-        "id": "EYQxjALG2iRa",
+        "id": "dmrwljjW2rla",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 3024
+          "height": 35
         },
-        "outputId": "9d2388e6-c3bc-406c-ea31-9dfb83706fc8"
+        "outputId": "8254f173-3907-4974-f89c-13f51b34ce80"
       },
       "cell_type": "code",
       "source": [
         "from nltk.corpus import stopwords\n",
         "stop_eng = stopwords.words(\"english\")\n",
-        "stop_eng"
+        "stop_eng[:8]"
       ],
       "execution_count": 3,
       "outputs": [
@@ -144,185 +142,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['i',\n",
-              " 'me',\n",
-              " 'my',\n",
-              " 'myself',\n",
-              " 'we',\n",
-              " 'our',\n",
-              " 'ours',\n",
-              " 'ourselves',\n",
-              " 'you',\n",
-              " \"you're\",\n",
-              " \"you've\",\n",
-              " \"you'll\",\n",
-              " \"you'd\",\n",
-              " 'your',\n",
-              " 'yours',\n",
-              " 'yourself',\n",
-              " 'yourselves',\n",
-              " 'he',\n",
-              " 'him',\n",
-              " 'his',\n",
-              " 'himself',\n",
-              " 'she',\n",
-              " \"she's\",\n",
-              " 'her',\n",
-              " 'hers',\n",
-              " 'herself',\n",
-              " 'it',\n",
-              " \"it's\",\n",
-              " 'its',\n",
-              " 'itself',\n",
-              " 'they',\n",
-              " 'them',\n",
-              " 'their',\n",
-              " 'theirs',\n",
-              " 'themselves',\n",
-              " 'what',\n",
-              " 'which',\n",
-              " 'who',\n",
-              " 'whom',\n",
-              " 'this',\n",
-              " 'that',\n",
-              " \"that'll\",\n",
-              " 'these',\n",
-              " 'those',\n",
-              " 'am',\n",
-              " 'is',\n",
-              " 'are',\n",
-              " 'was',\n",
-              " 'were',\n",
-              " 'be',\n",
-              " 'been',\n",
-              " 'being',\n",
-              " 'have',\n",
-              " 'has',\n",
-              " 'had',\n",
-              " 'having',\n",
-              " 'do',\n",
-              " 'does',\n",
-              " 'did',\n",
-              " 'doing',\n",
-              " 'a',\n",
-              " 'an',\n",
-              " 'the',\n",
-              " 'and',\n",
-              " 'but',\n",
-              " 'if',\n",
-              " 'or',\n",
-              " 'because',\n",
-              " 'as',\n",
-              " 'until',\n",
-              " 'while',\n",
-              " 'of',\n",
-              " 'at',\n",
-              " 'by',\n",
-              " 'for',\n",
-              " 'with',\n",
-              " 'about',\n",
-              " 'against',\n",
-              " 'between',\n",
-              " 'into',\n",
-              " 'through',\n",
-              " 'during',\n",
-              " 'before',\n",
-              " 'after',\n",
-              " 'above',\n",
-              " 'below',\n",
-              " 'to',\n",
-              " 'from',\n",
-              " 'up',\n",
-              " 'down',\n",
-              " 'in',\n",
-              " 'out',\n",
-              " 'on',\n",
-              " 'off',\n",
-              " 'over',\n",
-              " 'under',\n",
-              " 'again',\n",
-              " 'further',\n",
-              " 'then',\n",
-              " 'once',\n",
-              " 'here',\n",
-              " 'there',\n",
-              " 'when',\n",
-              " 'where',\n",
-              " 'why',\n",
-              " 'how',\n",
-              " 'all',\n",
-              " 'any',\n",
-              " 'both',\n",
-              " 'each',\n",
-              " 'few',\n",
-              " 'more',\n",
-              " 'most',\n",
-              " 'other',\n",
-              " 'some',\n",
-              " 'such',\n",
-              " 'no',\n",
-              " 'nor',\n",
-              " 'not',\n",
-              " 'only',\n",
-              " 'own',\n",
-              " 'same',\n",
-              " 'so',\n",
-              " 'than',\n",
-              " 'too',\n",
-              " 'very',\n",
-              " 's',\n",
-              " 't',\n",
-              " 'can',\n",
-              " 'will',\n",
-              " 'just',\n",
-              " 'don',\n",
-              " \"don't\",\n",
-              " 'should',\n",
-              " \"should've\",\n",
-              " 'now',\n",
-              " 'd',\n",
-              " 'll',\n",
-              " 'm',\n",
-              " 'o',\n",
-              " 're',\n",
-              " 've',\n",
-              " 'y',\n",
-              " 'ain',\n",
-              " 'aren',\n",
-              " \"aren't\",\n",
-              " 'couldn',\n",
-              " \"couldn't\",\n",
-              " 'didn',\n",
-              " \"didn't\",\n",
-              " 'doesn',\n",
-              " \"doesn't\",\n",
-              " 'hadn',\n",
-              " \"hadn't\",\n",
-              " 'hasn',\n",
-              " \"hasn't\",\n",
-              " 'haven',\n",
-              " \"haven't\",\n",
-              " 'isn',\n",
-              " \"isn't\",\n",
-              " 'ma',\n",
-              " 'mightn',\n",
-              " \"mightn't\",\n",
-              " 'mustn',\n",
-              " \"mustn't\",\n",
-              " 'needn',\n",
-              " \"needn't\",\n",
-              " 'shan',\n",
-              " \"shan't\",\n",
-              " 'shouldn',\n",
-              " \"shouldn't\",\n",
-              " 'wasn',\n",
-              " \"wasn't\",\n",
-              " 'weren',\n",
-              " \"weren't\",\n",
-              " 'won',\n",
-              " \"won't\",\n",
-              " 'wouldn',\n",
-              " \"wouldn't\"]"
+              "['i', 'me', 'my', 'myself', 'we', 'our', 'ours', 'ourselves']"
             ]
           },
           "metadata": {
@@ -334,13 +154,13 @@
     },
     {
       "metadata": {
-        "id": "xXPK8fYs2iRc",
+        "id": "ljzmOev_2rld",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         },
-        "outputId": "a9b66710-ce0b-46b7-9985-5da790e4b8d1"
+        "outputId": "50ffcd53-639a-4a37-a150-a54ccabe8d87"
       },
       "cell_type": "code",
       "source": [
@@ -367,13 +187,13 @@
     },
     {
       "metadata": {
-        "id": "yrBryHQ72iRe",
+        "id": "yVksIyqn2rlg",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         },
-        "outputId": "879c221c-1e81-4676-e40d-e23357db6cbf"
+        "outputId": "7ebf4bb3-510e-4f17-d80c-3c7ee27c498c"
       },
       "cell_type": "code",
       "source": [
@@ -399,13 +219,13 @@
     },
     {
       "metadata": {
-        "id": "UiiyhOWA2iRh",
+        "id": "oSCLRCcC2rlj",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         },
-        "outputId": "f364c502-6589-41d1-b921-47c484ca85dc"
+        "outputId": "9c085901-4a9d-48ce-8cf1-b06d2b59b558"
       },
       "cell_type": "code",
       "source": [
@@ -426,7 +246,7 @@
     },
     {
       "metadata": {
-        "id": "YYcWmKNA2iRj",
+        "id": "qVnpZfqQ2rll",
         "colab_type": "text"
       },
       "cell_type": "markdown",
@@ -438,19 +258,22 @@
     },
     {
       "metadata": {
-        "id": "Wu4aT-L32iRk",
+        "id": "96upZtAh2rlm",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 55
         },
-        "outputId": "d5f25cd3-c881-49f8-a613-8a6922784ed0"
+        "outputId": "95b41365-f6de-4ca5-91a8-ec86033488f4"
       },
       "cell_type": "code",
       "source": [
+        "# with open(news_texts, 'r') as f:\n",
+        "#     texts = f.read()\n",
+        "# texts = texts.lower()\n",
+        "\n",
         "import requests\n",
-        "texts = requests.get(news_texts).text\n",
-        "texts = texts.lower()\n",
+        "texts = requests.get(news_texts).text.lower()\n",
         "texts[:300]"
       ],
       "execution_count": 7,
@@ -471,13 +294,13 @@
     },
     {
       "metadata": {
-        "id": "FHkeSIJH2iRm",
+        "id": "fLapw_Da2rlp",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 55
         },
-        "outputId": "23159288-5f58-46cb-f1d3-9eeeb76085eb"
+        "outputId": "0f93e0ca-ae15-4615-fdc4-abe26a6318b5"
       },
       "cell_type": "code",
       "source": [
@@ -506,13 +329,13 @@
     },
     {
       "metadata": {
-        "id": "ZpFC8j_B2iRo",
+        "id": "9kfmIR0J2rlr",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1697
+          "height": 1835
         },
-        "outputId": "17227b71-df65-4905-e701-62ae2168d572"
+        "outputId": "e1fce611-f0c1-422d-e097-bec81af70888"
       },
       "cell_type": "code",
       "source": [
@@ -641,13 +464,13 @@
     },
     {
       "metadata": {
-        "id": "eBnpdgp52iRq",
+        "id": "g9Xy-KJ82rlu",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 8366
+          "height": 9054
         },
-        "outputId": "c01dac7e-b352-4a66-a643-f1689bce6472"
+        "outputId": "f1cb1ccc-093a-48f6-96ec-feab190c42f2"
       },
       "cell_type": "code",
       "source": [
@@ -1167,6 +990,19 @@
           "execution_count": 10
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "uESNNyRq3XnA",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
