--- a/ipython/01-Token.ipynb
+++ b/ipython/01-Token.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,58 +21,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# pip3 install nltk\n",
     "import nltk\n",
     "# nltk.download('punkt')\n",
     "# nltk.download('tagsets')\n",
     "# nltk.download('averaged_perceptron_tagger')\n",
     "text_eng  = \" Don't hesitate to ask questions\"\n",
     "text_kor  = \"\"\"삼성 갤럭시(GalaxyNote)노트의 신형을 홍보 합니다. \n",
-    "홍보:유관순 010-8888-9999.\n",
-    "삼성 페이지 https://www.samsung.com/sec/index.html\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'삼성 갤럭시(GalaxyNote)노트의 신형을 홍보 합니다. \\n홍보:유관순 010-8888-9999.\\n삼성 페이지 https://www.samsung.com/sec/index.html'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "홍보:유관순 010-8888-9999 031-444-5555.\n",
+    "삼성 페이지 https://www.samsung.com/sec/index.html\"\"\"\n",
+    "\n",
     "text_kor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['삼성 갤럭시(GalaxyNote)노트의 신형을 홍보 합니다.',\n",
-       " '홍보:유관순 010-8888-9999.',\n",
-       " '삼성 페이지 https://www.samsung.com/sec/index.html']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nltk import sent_tokenize, word_tokenize, FreqDist\n",
     "sent_tokenize(text_kor)"
@@ -80,39 +50,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['삼성',\n",
-       " '갤럭시',\n",
-       " '(',\n",
-       " 'GalaxyNote',\n",
-       " ')',\n",
-       " '노트의',\n",
-       " '신형을',\n",
-       " '홍보',\n",
-       " '합니다',\n",
-       " '.',\n",
-       " '홍보',\n",
-       " ':',\n",
-       " '유관순',\n",
-       " '010-8888-9999',\n",
-       " '.',\n",
-       " '삼성',\n",
-       " '페이지',\n",
-       " 'https',\n",
-       " ':',\n",
-       " '//www.samsung.com/sec/index.html']"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tokens = word_tokenize(text_kor)\n",
     "tokens"
@@ -120,37 +60,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'삼성': 2,\n",
-       " '갤럭시': 1,\n",
-       " '(': 1,\n",
-       " 'GalaxyNote': 1,\n",
-       " ')': 1,\n",
-       " '노트의': 1,\n",
-       " '신형을': 1,\n",
-       " '홍보': 2,\n",
-       " '합니다': 1,\n",
-       " '.': 2,\n",
-       " ':': 2,\n",
-       " '유관순': 1,\n",
-       " '010-8888-9999': 1,\n",
-       " '페이지': 1,\n",
-       " 'https': 1,\n",
-       " '//www.samsung.com/sec/index.html': 1}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dict(FreqDist(tokens))"
    ]
@@ -166,40 +80,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'삼성 갤럭시(GalaxyNote)노트의 신형을 홍보 합니다. \\n홍보:유관순 010-8888-9999.\\n삼성 페이지 https://www.samsung.com/sec/index.html'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "text_kor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['삼성', '갤럭시', '노트의', '신형을', '홍보', '합니다', '홍보', '유관순', '삼성', '페이지']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "tokenizer = re.compile(r'[가-힣]+')\n",
@@ -208,41 +91,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['010-8888-9999']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tokenizer = re.compile(r'[0-9]{3}-[0-9]{3,4}-[0-9]{4}')\n",
-    "tokenizer.findall(text_kor)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['010-8888-9999']"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tokenizer = re.compile(r'\\d{3}-\\d{3,4}-\\d{4}')\n",
     "tokenizer.findall(text_kor)"
@@ -250,25 +101,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['(GalaxyNote)',\n",
-       " '.',\n",
-       " '\\n',\n",
-       " ':',\n",
-       " '010-8888-9999.\\n',\n",
-       " 'https://www.samsung.com/sec/index.html']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tokenizer = re.compile(r'[^ 가-힣]+')\n",
     "tokenizer.findall(text_kor)"
@@ -276,40 +111,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'삼성 갤럭시노트의 신형을 홍보 합니다 홍보유관순 삼성 페이지 '"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tokenizer.sub(\"\", text_kor)#.split(\" \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['https://www.samsung.com/sec/index.html']"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tokenizer = re.compile(r'https://[w]{3}.[A-z]+.[./A-z]+')\n",
     "tokenizer.findall(text_kor)"
@@ -326,20 +139,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\" don't hesitate to ask questions\""
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "text_eng = text_eng.lower()\n",
     "text_eng"
@@ -347,20 +149,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['do', \"n't\", 'hesitate', 'to', 'ask', 'questions']"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nltk.tokenize import TreebankWordTokenizer\n",
     "tokenizer = TreebankWordTokenizer()\n",
@@ -370,25 +161,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('do', 'VBP'),\n",
-       " (\"n't\", 'RB'),\n",
-       " ('hesitate', 'VB'),\n",
-       " ('to', 'TO'),\n",
-       " ('ask', 'VB'),\n",
-       " ('questions', 'NNS')]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nltk import pos_tag\n",
     "pos_tag(token)"
@@ -396,19 +171,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PRP: pronoun, personal\n",
-      "    hers herself him himself hisself it itself me myself one oneself ours\n",
-      "    ourselves ownself self she thee theirs them themselves they thou thy us\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import nltk.help as nltk_help\n",
     "nltk_help.upenn_tagset('PRP')  # 대명사"
@@ -416,20 +181,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "JJ: adjective or numeral, ordinal\n",
-      "    third ill-mannered pre-war regrettable oiled calamitous first separable\n",
-      "    ectoplasmic battery-powered participatory fourth still-to-be-named\n",
-      "    multilingual multi-disciplinary ...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nltk_help.upenn_tagset('JJ')  # 형용사"
    ]
@@ -445,83 +199,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('파이썬', 'Noun'), ('을', 'Josa'), ('활용', 'Noun'), ('하다', 'Verb'), ('자연어', 'Noun'), ('분석', 'Noun'), ('특강', 'Noun'), ('이다', 'Adjective')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from konlpy.tag import Okt\n",
+    "from konlpy.tag import Okt, Kkma, Hannanum\n",
     "twitter = Okt()\n",
-    "\n",
-    "# Stemming\n",
-    "text = \"파이썬을 활용하여 자연어 분석 특강입니다\"\n",
+    "text    = \"파이썬을 활용하여 자연어 분석 특강입니다\"\n",
     "print(twitter.pos(text, stem=\"true\")) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('파이썬', 'Noun'), ('을', 'Josa'), ('활용', 'Noun'), ('하여', 'Verb'), ('자연어', 'Noun'), ('분석', 'Noun'), ('특강', 'Noun'), ('입니다', 'Adjective')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(twitter.pos(text))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('파이', 'NNG'), ('썰', 'VV'), ('ㄴ', 'ETD'), ('을', 'NNG'), ('활용', 'NNG'), ('하', 'XSV'), ('여', 'ECS'), ('자연어', 'NNG'), ('분석', 'NNG'), ('특강', 'NNG'), ('이', 'VCP'), ('ㅂ니다', 'EFN')]\n",
-      "CPU times: user 16.8 s, sys: 223 ms, total: 17 s\n",
-      "Wall time: 5.88 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
-    "from konlpy.tag import Kkma\n",
     "kkma = Kkma()\n",
     "print(kkma.pos(text))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('파이썬', 'N'), ('을', 'J'), ('활용', 'N'), ('하', 'X'), ('어', 'E'), ('자연어', 'N'), ('분석', 'N'), ('특강', 'N'), ('이', 'J'), ('ㅂ니다', 'E')]\n",
-      "CPU times: user 7.59 s, sys: 82.9 ms, total: 7.68 s\n",
-      "Wall time: 2.19 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
-    "from konlpy.tag import Hannanum\n",
     "han = Hannanum()\n",
     "print(han.pos(text))"
    ]
