--- a/ipython/Wordnet.ipynb
+++ b/ipython/Wordnet.ipynb
@@ -14,17 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ! pip3 install nltk\n",
-    "# ! pip install pywsd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -32,6 +22,8 @@
    },
    "outputs": [],
    "source": [
+    "# ! pip3 install nltk pywsd symspellpy\n",
+    "\n",
     "# import nltk\n",
     "# nltk.download('treebank')\n",
     "# nltk.download('wordnet')\n",
@@ -42,44 +34,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "sgj4wE8NzWS1"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Grammar with 23 productions (start state = S)\n",
-      "    S -> NP VP [1.0]\n",
-      "    VP -> V NP [0.59]\n",
-      "    VP -> V [0.4]\n",
-      "    VP -> VP PP [0.01]\n",
-      "    NP -> Det N [0.41]\n",
-      "    NP -> Name [0.28]\n",
-      "    NP -> NP PP [0.31]\n",
-      "    PP -> P NP [1.0]\n",
-      "    V -> 'saw' [0.21]\n",
-      "    V -> 'ate' [0.51]\n",
-      "    V -> 'ran' [0.28]\n",
-      "    N -> 'boy' [0.11]\n",
-      "    N -> 'cookie' [0.12]\n",
-      "    N -> 'table' [0.13]\n",
-      "    N -> 'telescope' [0.14]\n",
-      "    N -> 'hill' [0.5]\n",
-      "    Name -> 'Jack' [0.52]\n",
-      "    Name -> 'Bob' [0.48]\n",
-      "    P -> 'with' [0.61]\n",
-      "    P -> 'under' [0.39]\n",
-      "    Det -> 'the' [0.41]\n",
-      "    Det -> 'a' [0.31]\n",
-      "    Det -> 'my' [0.28]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 촘스키 CGF 문법규칙\n",
     "from nltk.grammar import toy_pcfg2\n",
@@ -89,30 +50,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "XO64HgtKzWTC"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Synset list : \n",
-      "[Synset('bank.n.01'), Synset('depository_financial_institution.n.01'), Synset('bank.n.03'), Synset('bank.n.04'), Synset('bank.n.05'), Synset('bank.n.06'), Synset('bank.n.07'), Synset('savings_bank.n.02'), Synset('bank.n.09'), Synset('bank.n.10'), Synset('bank.v.01'), Synset('bank.v.02'), Synset('bank.v.03'), Synset('bank.v.04'), Synset('bank.v.05'), Synset('deposit.v.02'), Synset('bank.v.07'), Synset('trust.v.01')]\n",
-      "\n",
-      "bank.n.02 뜻과 예제 : \n",
-      "a financial institution that accepts deposits and channels the money into lending activities\n",
-      "['he cashed a check at the bank', 'that bank holds the mortgage on my home']\n",
-      "\n",
-      "trust.v.01 뜻과 예제 :\n",
-      "have confidence or faith in\n",
-      "['We can trust in God', 'Rely on your friends', 'bank on your good education', \"I swear by my grandmother's recipes\"]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# WordNet 데이터를 활용한 의미관계 분석\n",
     "from nltk.corpus import wordnet as wn\n",
@@ -126,31 +70,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "yxd_6tpQzWTr"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warming up PyWSD (takes ~10 secs)... took 2.887956142425537 secs.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'a financial institution that accepts deposits and channels the money into lending activities'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pywsd 를 사용한 문장 내 의미분석\n",
     "sent = 'I went to the bank to deposit my money'\n",
@@ -175,20 +101,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ! pip install -U symspellpy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from symspellpy.symspellpy import SymSpell  # import the module\n",
+    "from symspellpy.symspellpy import SymSpell\n",
     "\n",
     "def spellCheck(dict_file, sentence):\n",
     "    max_edit_dist, prefix_length = 0, 7\n",
@@ -196,7 +113,7 @@
     "    \n",
     "    sym_spell = SymSpell(max_edit_dist, prefix_length)\n",
     "    if not sym_spell.load_dictionary(dict_file, term_index, count_index):\n",
-    "        print(\"사전파일을 정의하지 않았습니다\"); return\n",
+    "        print(\"사전이 없습니다\"); return\n",
     "    \n",
     "    result = sym_spell.word_segmentation(sentence)\n",
     "    print(\"오타 수정결과: {}\\n편집거리 총합: {}\".format(\n",
@@ -206,18 +123,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "오타 수정결과: the quick brown fox jumps over the lazy dog\n",
-      "편집거리 총합: 8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "text = \"thequickbrownfoxjumpsoverthelazydog\"\n",
     "spellCheck(\"../data/frequency_dictionary_en_82_765.txt\", sentence=text)"
